# reasona

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
docs/: api-reference.md  core-concepts.md  getting-started.md  index.md
examples/: 01_basic_agent.py  02_custom_tools.py  03_multi_agent.py  04_workflow.py  05_rest_api.py  06_hypermcp.py  07_markdown_agents.py  README.md  basic_agent.py  multi_agent.py  workflow_pipeline.py
src/reasona/: __init__.py
src/reasona.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/reasona/cli/: __init__.py  main.py
src/reasona/core/: __init__.py  conductor.py  config.py  context.py  message.py  synapse.py  workflow.py
src/reasona/integrations/: __init__.py  providers.py
src/reasona/mcp/: __init__.py  hypermcp.py
src/reasona/server/: __init__.py  api.py
src/reasona/tools/: __init__.py  base.py  builtin.py
tests/: __init__.py  conftest.py  test_api.py  test_core.py  test_integration.py  test_mcp.py  test_tools.py
